src/parser/snapshots/rex__parser__tests__snapshot_symbols-9.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\ge\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '>',
                atom_type: Relation,
            },
        ),
    ],
)
