src/parser/snapshots/rex__parser__tests__snapshot_text_operators-2.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\log (42 + 1)\")"
---
Ok(
    [
        AtomChange(
            AtomChange {
                at: Operator(
                    false,
                ),
                inner: [
                    PlainText(
                        PlainText {
                            text: "log",
                        },
                    ),
                ],
            },
        ),
        Symbol(
            Symbol {
                codepoint: '(',
                atom_type: Open,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '4',
                atom_type: Alpha,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '2',
                atom_type: Alpha,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '+',
                atom_type: Binary,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '1',
                atom_type: Alpha,
            },
        ),
        Symbol(
            Symbol {
                codepoint: ')',
                atom_type: Close,
            },
        ),
    ],
)
