src/parser/snapshots/rex__parser__tests__snapshot_text_operators-3.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sin(a + b) = \\sin a \\cos b + \\cos b \\sin a\")"
---
Ok(
    [
        AtomChange(
            AtomChange {
                at: Operator(
                    false,
                ),
                inner: [
                    PlainText(
                        PlainText {
                            text: "sin",
                        },
                    ),
                ],
            },
        ),
        Symbol(
            Symbol {
                codepoint: '(',
                atom_type: Open,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '𝑎',
                atom_type: Alpha,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '+',
                atom_type: Binary,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '𝑏',
                atom_type: Alpha,
            },
        ),
        Symbol(
            Symbol {
                codepoint: ')',
                atom_type: Close,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '=',
                atom_type: Relation,
            },
        ),
        AtomChange(
            AtomChange {
                at: Operator(
                    false,
                ),
                inner: [
                    PlainText(
                        PlainText {
                            text: "sin",
                        },
                    ),
                ],
            },
        ),
        Symbol(
            Symbol {
                codepoint: '𝑎',
                atom_type: Alpha,
            },
        ),
        AtomChange(
            AtomChange {
                at: Operator(
                    false,
                ),
                inner: [
                    PlainText(
                        PlainText {
                            text: "cos",
                        },
                    ),
                ],
            },
        ),
        Symbol(
            Symbol {
                codepoint: '𝑏',
                atom_type: Alpha,
            },
        ),
        Symbol(
            Symbol {
                codepoint: '+',
                atom_type: Binary,
            },
        ),
        AtomChange(
            AtomChange {
                at: Operator(
                    false,
                ),
                inner: [
                    PlainText(
                        PlainText {
                            text: "cos",
                        },
                    ),
                ],
            },
        ),
        Symbol(
            Symbol {
                codepoint: '𝑏',
                atom_type: Alpha,
            },
        ),
        AtomChange(
            AtomChange {
                at: Operator(
                    false,
                ),
                inner: [
                    PlainText(
                        PlainText {
                            text: "sin",
                        },
                    ),
                ],
            },
        ),
        Symbol(
            Symbol {
                codepoint: '𝑎',
                atom_type: Alpha,
            },
        ),
    ],
)
