src/parser/snapshots/rex__parser__tests__snapshot_text_operators-4.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\det_{B} M\")"
---
Ok(
    [
        Scripts(
            Scripts {
                base: Some(
                    AtomChange(
                        AtomChange {
                            at: Operator(
                                true,
                            ),
                            inner: [
                                PlainText(
                                    PlainText {
                                        text: "det",
                                    },
                                ),
                            ],
                        },
                    ),
                ),
                superscript: None,
                subscript: Some(
                    [
                        Symbol(
                            Symbol {
                                codepoint: '𝐵',
                                atom_type: Alpha,
                            },
                        ),
                    ],
                ),
            },
        ),
        Symbol(
            Symbol {
                codepoint: '𝑀',
                atom_type: Alpha,
            },
        ),
    ],
)
