src/parser/snapshots/rex__parser__tests__snapshot_text_operators.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sin 1\")"
---
Ok(
    [
        AtomChange(
            AtomChange {
                at: Operator(
                    false,
                ),
                inner: [
                    PlainText(
                        PlainText {
                            text: "sin",
                        },
                    ),
                ],
            },
        ),
        Symbol(
            Symbol {
                codepoint: '1',
                atom_type: Alpha,
            },
        ),
    ],
)
